# MagPulse

./: CMakeLists.txt  CMakeSettings.json
src/: main.cpp  test.cpp
